<resources>
    <plurals name="showing_result">
        <item quantity="one">Showing 1 Result</item>
        <item quantity="other">Showing %d Results</item>
    </plurals>
    <string name="app_name">Teresa</string>
    <string name="tag_line">The Boutique Revolution</string>
    <string name="powered_by">Powered by Coinone Global Solutions Pvt Ltd</string>
    <string name="employee_login">Employee Login</string>
    <string name="username_mobile_no">Username or Mobile No.</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="house_name">House Name</string>
    <string name="co">C/O</string>
    <string name="place">Place</string>
    <string name="phone_number">Phone Number</string>
    <string name="DoB">Date of Birth</string>
    <string name="facebook_profile">Facebook Profile</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="contact_address">Contact Address</string>
    <string name="email_id">Email Id</string>
    <string name="remarks">Remarks</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="do_alteration">Do you want Alteration?</string>
    <string name="alternation">Alteration</string>
    <string name="product_listing">Product Listings</string>
    <string name="new_order">New Order</string>
    <string name="search_results">Search Results</string>
    <string name="code">Code</string>
    <string name="ordered_item">Ordered Items</string>
    <!--<string name="new_order">New</string>-->
    <string name="orders">Orders</string>
    <string name="priority">Priority</string>
    <string name="function">Function</string>
    <string name="fabric">Fabric</string>
    <string name="top">Top</string>
    <string name="top_lining">Top Lining</string>
    <string name="lace">Lace</string>
    <string name="yoke">Yoke</string>
    <string name="yoke_lining">yoke Lining</string>
    <string name="sleeve_lining">Sleeve Lining</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_lining">Bottom Lining</string>
    <string name="shawl">Shawl</string>
    <string name="work_piece">Work Piece</string>
    <string name="measurement">Measurement</string>
    <string name="designer">Designer</string>
    <string name="others">Others</string>
    <string name="pleat">Pleat</string>
    <string name="open">Open</string>
    <string name="panel">Panel</string>
    <string name="tassels">Tassels</string>
    <string name="lock">Lock</string>
    <string name="fall">Fall</string>
    <string name="hanging">Hanging</string>
    <string name="frock">Frock</string>
    <string name="frock_type">Frock Type</string>
    <string name="tunics">Tungies</string>
    <string name="transparent">Transparent</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="yolk_measurement">Yoke Measurement</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="lining">Lining</string>
    <string name="work">Work</string>
    <string name="due_date">Due Date</string>
    <string name="top_measurement">Top Measurement</string>
    <string name="skirt_measurement">Skirt Measurement</string>
    <string name="enter_measurement">Enter Measurement</string>
    <string name="model">Model</string>
    <string name="finish">Finish</string>
    <string name="template_number">Template Number</string>
    <string name="zip">Zip</string>
    <string name="pad">Pad</string>
    <string name="no">No</string>
    <string name="ykk">Ykk</string>
    <string name="normal">Normal</string>
    <string name="hiding">Hiding</string>
    <string name="tuck">Tuck</string>
    <string name="skirts">Skirts</string>
    <string name="skirt_lining">Skirt Lining</string>
    <string name="sleeve">Sleeve</string>
    <string name="speakernet">Speakernet</string>
    <string name="speakernet_lining">Speakernet Lining</string>
    <string name="piping">Piping</string>
    <string name="piping_lining">Piping Lining</string>
    <string name="spp">SPP</string>
    <string name="dpp">DPP</string>
    <string name="ss">SS</string>
    <string name="fs">FS</string>
    <string name="cs">CS</string>
    <string name="three_fourth">3/4</string>
    <string name="kl">EL</string>
    <string name="neck">Neck</string>
    <string name="boat">Boat</string>
    <string name="collar">Collar</string>
    <string name="wide">Wide</string>
    <string name="square">Square</string>
    <string name="high_neck">High Neck</string>
    <string name="flair">Flair</string>
    <string name="border">Border</string>
    <string name="works">Works</string>
    <string name="slit">Slit</string>
    <string name="side">Side</string>
    <string name="churi">Churi</string>
    <string name="loose">Loose</string>
    <string name="pencil">Pencil</string>
    <string name="parallel">Parallel</string>
    <string name="pattiyala">Pattiyala</string>
    <string name="pallaso">Pallaso</string>
    <string name="pocket">Pocket</string>
    <string name="elastic">Elastic</string>
    <string name="press_button">Press Button</string>
    <string name="arm_hole">Arm Hole</string>
    <string name="straight">Straight</string>
    <string name="umbrella">Umbrella</string>
    <string name="sc_ws">SC WS</string>
    <string name="front_slit">Front Slit</string>
    <string name="customer_measurement">Customer Measurement</string>
    <string name="fitting">Fitting</string>
    <string name="loose_fit">Loose Fit</string>
    <string name="tight_fit">Tight Fit</string>
    <string name="medium">Medium</string>
    <string name="length">Length</string>
    <string name="short1">Short</string>
    <string name="long1">Long</string>
    <string name="ch">CH</string>
    <string name="anr">ANR</string>
    <string name="um">UM</string>
    <string name="shoulder">Shoulder</string>
    <string name="f_b">F/B</string>
    <string name="shw">SHW</string>
    <string name="chest">Chest</string>
    <string name="ready">Ready</string>
    <string name="point1">Point</string>
    <string name="shape">Shape</string>
    <string name="r">R</string>
    <string name="sleeves">Sleeves</string>
    <string name="sub_sleeves">SubSleeves</string>
    <string name="full">Full</string>
    <string name="qtr">QTR</string>
    <string name="arm_round">Arm Round</string>
    <string name="f">F</string>
    <string name="b">B</string>
    <string name="w">W</string>
    <string name="waist_r">Waist R</string>
    <string name="hip">Hip</string>
    <string name="salwar">Salwar</string>
    <string name="bell">Bell</string>
    <string name="a_line">A-Line</string>
    <string name="umbrella_box">Umbrella Box</string>
    <string name="balloon_box">Balloon Box</string>
    <string name="tube_frock">Tube Frock</string>
    <string name="save_dialog_msg">Continue to save new customer details!</string>
    <string name="update_dialog_msg">Continue to update existing customer details!</string>


    <string name="hint_login_username"><small>Enter your Email ID or Mobile number</small></string>
    <string name="hint_login_password"><small>Enter your Password</small></string>
    <string name="hint_mobile"><small>+91 xxxxxxxxxx</small></string>
    <string name="hint_customer_name"><small>Example</small></string>
    <string name="hint_house_name"><small>Search By House Name</small></string>
    <string name="hint_facebook"><small>www.facebook.com/example1991</small></string>
    <string name="hint_email"><small>example@gmail.com</small></string>
    <string name="hint_template_number"><small>Enter template number</small></string>
    <string name="body_measurements">Body Measurements</string>
    <string name="half">Half</string>
    <string name="h">H</string>
    <string name="l">L</string>
    <string name="crop">Crop</string>
    <string name="pencil_cut">Pencil Cut</string>
    <string name="overcoat">Overcoat</string>

</resources>
