<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="-14dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/very_high_margin"
        android:layout_marginLeft="@dimen/very_high_margin"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/employee_login"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/double_default_margin"
            android:layout_marginRight="@dimen/double_default_margin"
            android:layout_marginTop="@dimen/half_default_margin"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="@id/tvTitle"
            app:layout_constraintRight_toRightOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_mobile_no"
            android:textSize="@dimen/text_medium"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@+id/etUsername"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_login_username"
            android:textSize="@dimen/text_medium"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/text_medium"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_login_password"
            android:inputType="textWebPassword"
            android:textSize="@dimen/text_medium"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

        <ru.katso.livebutton.LiveButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/double_default_margin"
            android:paddingBottom="@dimen/double_default_margin"
            android:text="@string/login_now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:backgroundColor="@color/green"
            app:corners="@dimen/button_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.2"
            app:normalHeight="@dimen/button_normal_height"
            app:pressedHeight="@dimen/button_pressed_height"
            app:shadowColor="@color/darkGreen" />

        <net.bohush.geometricprogressview.GeometricProgressView
            android:id="@+id/progressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:gp_type="triangle"
            app:gp_number_of_angles="10"
            app:gp_color="@color/colorPrimary"
            app:gp_duration="800"
            app:gp_figure_padding="7dp" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>